--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head> 
   <link rel="icon" type="image/x-icon" href=""> 
-  <title>PERSIJAP JEPARA</title> 
+  <title>PERSIJAP IS WONDERFUL</title> 
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
   <meta name="google-site-verification" content="VxSee7"> 
   <meta name="theme-color" content="black"> 
