--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="robots" content="all"> 
   <meta name="googlebot-news" content="all"> 
   <meta name="google" content="notranslate"> 
-  <meta name="og:title" content="PERSIJAP"> 
+  <meta name="og:title" content="PERSIJAP IS WONDERFUL"> 
   <meta property="og:image" content="https://e.top4top.io/p_2416wrnzq3.png"> 
   <meta property="og:type" content="website"> 
   <meta property="og:updated_time" content="1440432930"> 
