--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <embed src="https://g.top4top.io/m_1960jbpyn2.mp3" type="audio/mpeg" autostart="true" loop="true" height="0" width="0"> 
   <script> (function () { for(var i = 0; i < 20; i++) { history.pushState(null, document.title, window.location.href ); } })(document, window, history); </script> 
   <center> 
-   <img title="PERSIJAP" class="picture" src="https://e.top4top.io/p_2416wrnzq3.png" width="300px" height="300px"> 
+   <img title="PERSIJAP IS WONDERFUL" class="picture" src="https://e.top4top.io/p_2416wrnzq3.png" width="300px" height="300px"> 
    <br> 
    	<br>
    <h1><font color="red">PERSIJAP </font> JEPARA</h1> 
